# orbit-agentic-workflow

./: .antigravityignore  .gitignore  .orbitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE.md  Makefile  README.md  RELEASING.md  SECURITY.md  current_engine.rs  execute_loop.sh  gh_commands.md  old_engine.rs  orbit-adr.json  patch.js  patch2.js  patch3.js  patch_adr.js  patch_css.js  plan.md  plan_1.md  research.md
crates/orbit-agent/: Cargo.toml  README.md
crates/orbit-agent/examples/: anthropic_messages.rs  google_gemini.rs  guardrails_smoke.rs  openai_compat.rs  redaction_smoke.rs  session_continuation.rs  tool_allowlist.rs
crates/orbit-agent/src/: lib.rs
crates/orbit-cli/: Cargo.toml
crates/orbit-cli/src/: audit_middleware.rs  main.rs  parse.rs
crates/orbit-cli/tests/: design_check.rs  docs.rs  hook_install.rs  hook_pretooluse.rs  learning.rs  semantic_companion.rs  task_attribution_migration.rs  task_lifecycle_bulk_json.rs  task_tags.rs  task_type_migration.rs  tool_list.rs  worktree_resolution.rs
crates/orbit-common/: Cargo.toml  RETIRE.md
crates/orbit-common/examples/: v2_asset_smoke.rs  v2_job_kind_smoke.rs  v2_round_trip.rs
crates/orbit-common/src/: friction.rs  groundhog.rs  lib.rs
crates/orbit-common/tests/: groundhog_prefix.rs  intentional_ci_failure.rs  task_artifacts_v2.rs
crates/orbit-core/: Cargo.toml
crates/orbit-core/assets/: agent-rules.md
crates/orbit-core/examples/: v2_backend_precedence_smoke.rs
crates/orbit-core/src/: context.rs  lib.rs  paths.rs  workspace_registry.rs
crates/orbit-core/tests/: grok_cli_backend_smoke.rs  relation_auto_close.rs
crates/orbit-dashboard/: Cargo.toml
crates/orbit-dashboard/src/: lib.rs  log_format.rs  parse.rs  projections.rs
crates/orbit-embed/: Cargo.toml
crates/orbit-embed-companion/: Cargo.toml
crates/orbit-embed-companion/src/: main.rs
crates/orbit-embed/src/: companion.rs  embedder.rs  lib.rs  noop.rs  rpc.rs  subprocess.rs
crates/orbit-embed/tests/: parity.rs
crates/orbit-engine/: Cargo.toml
crates/orbit-engine/examples/: v2_cli_backend_smoke.rs  v2_job_runtime_smoke.rs  v2_name_resolution_smoke.rs  v2_runtime_smoke.rs
crates/orbit-engine/src/: activity_runner.rs  checkpoint_verifier.rs  context.rs  lib.rs  reconciler.rs  template.rs  workspace_snapshot.rs
crates/orbit-engine/tests/: checkpoint_verifier.rs  workspace_snapshot.rs
crates/orbit-exec/: Cargo.toml
crates/orbit-exec/src/: lib.rs  macos_sandbox.rs  process.rs  result.rs  runner.rs  sandbox.rs
crates/orbit-knowledge/: Cargo.toml  README.md
crates/orbit-knowledge/examples/: graph_build.rs  identity_key_benchmark.rs
crates/orbit-knowledge/src/: core.rs  error.rs  extractor.rs  graph_bench.rs  io.rs  lib.rs  lock.rs  selector.rs  store.rs  task_id_pattern.rs  working_graph.rs
crates/orbit-knowledge/tests/: branch_refs.rs  config_table_file_nodes.rs  graph_bench.rs  leaf_id_uniqueness.rs  orbitignore.rs  rust_exports.rs  store_cache.rs  task_history.rs  typescript.rs
crates/orbit-mcp/: Cargo.toml
crates/orbit-mcp/src/: adapter.rs  error.rs  lib.rs
crates/orbit-policy/: Cargo.toml
crates/orbit-policy/src/: decision.rs  engine.rs  evaluator.rs  lib.rs
crates/orbit-registry/: Cargo.toml
crates/orbit-registry/src/: error.rs  lib.rs
crates/orbit-registry/tests/: dep_boundary.rs
crates/orbit-search-companion/: Cargo.toml
crates/orbit-search-companion/src/: main.rs
crates/orbit-store/: Cargo.toml
crates/orbit-store/migrations/: 0001_init.sql
crates/orbit-store/src/: json_schema.rs  lib.rs  scope.rs  state_io.rs
crates/orbit-store/tests/: legacy_models_warns.rs
crates/orbit-tools/: Cargo.toml
crates/orbit-tools/src/: external.rs  graph.rs  lib.rs  registry.rs
crates/orbit-tools/tests/: graph_tool_descriptions.rs  graph_tool_schema_size.rs  graph_tool_surface.rs  policy_deny_tracing.rs  public_tool_surface.rs
crates/orbit-types/: Cargo.toml
crates/orbit-util/: Cargo.toml
orbit-agent/: AGENTS.md  Cargo.toml  README.md  graph_navigation.md  pyproject.toml
orbit-agent/orbit_agent/: graph_context.py  main.py
orbit-agent/src/: lib.rs
orbit-agent/tests/: protocol_behavior.rs
orbit-cli/: Cargo.toml
orbit-cli/src/: audit_middleware.rs  main.rs  parse.rs
orbit-cli/tests/: activity_commands.rs  agent_commands.rs  audit_commands.rs  config_commands.rs  entry_commands.rs  execution_spec_commands.rs  identity_commands.rs  init_commands.rs  job_commands.rs  mcp_init_commands.rs  scheduler_commands.rs  scoping_invariants.rs  skill_commands.rs  task_commands.rs  tool_commands.rs  work_commands.rs  workspace_commands.rs
orbit-core/: Cargo.toml
orbit-core/src/: config.rs  context.rs  fs_utils.rs  identity_catalog.rs  job.rs  job_file_store.rs  lib.rs  paths.rs  skill_catalog.rs  task_file_store.rs  template.rs  watch.rs  work_file_store.rs  workspace_registry.rs
orbit-core/tests/: agent_context_composition.rs  agent_run_behavior.rs  asset_formatting.rs  entry_runtime_behavior.rs  job_protocol_behavior.rs  job_runtime_behavior.rs  scheduler_protocol_behavior.rs  scheduler_runtime_behavior.rs  scoping_invariants.rs  skill_catalog_behavior.rs  skill_runtime_behavior.rs
orbit-engine/: Cargo.toml
orbit-engine/src/: activity_runner.rs  context.rs  job_runner.rs  lib.rs
orbit-map/: AGENTS.md  README.md  graph_navigation.md  pyproject.toml
orbit-map/orbit_map/: logging_utils.py  main.py
orbit-map/tests/: test_handoff.py  test_hash_cache.py  test_lineage_pack.py
orbit-store/: Cargo.toml
orbit-store/migrations/: 0001_init.sql
orbit-store/src/: audit_store.rs  backend.rs  connection.rs  entry_store.rs  execution_spec_store.rs  job_store.rs  json_schema.rs  lib.rs  lock.rs  memo_store.rs  migration.rs  scope_guard.rs  skill_store.rs  task_store.rs  tool_store.rs  watch_store.rs  work_store.rs  workflow_store.rs
orbit-store/tests/: entry_store_integration.rs  job_store_integration.rs  scheduler_store_integration.rs  skill_store_integration.rs  store_integration.rs
orbit/orbit-tools/: Cargo.toml
(+3906 files in other folders)
