[workspace]
members = [
  "orbit/orbit-agent",
  "orbit/orbit-cli",
  "orbit/orbit-core",
  "orbit/orbit-engine",
  "orbit/orbit-lock",
  "orbit/orbit-types",
  "orbit/orbit-store",
  "orbit/orbit-policy",
  "orbit/orbit-exec",
  "orbit/orbit-tools",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
jsonschema = { version = "0.18", default-features = false }
libc = "0.2"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
wait-timeout = "0.2"
