[workspace]
members = [
  "crates/orbit-agent",
  "crates/orbit-cli",
  "crates/orbit-core",
  "crates/orbit-engine",
  "crates/orbit-knowledge",
  "crates/orbit-types",
  "crates/orbit-store",
  "crates/orbit-policy",
  "crates/orbit-exec",
  "crates/orbit-tools",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
axum = { version = "0.7", default-features = false, features = ["http1", "json", "query", "tokio"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net"] }
jsonschema = { version = "0.18", default-features = false }
libc = "0.2"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
sha2 = "0.10"
tiktoken-rs = "0.11.0"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
wait-timeout = "0.2"
