[project]
name = "orbit-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "pydantic>=2.0",
    "tiktoken",
    "click",
    "openai",
]

[project.scripts]
orbit-agent = "orbit_agent.main:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
