[package]
name = "orbit"
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
csv = "1"
orbit-core = { path = "../orbit-core", features = ["clap"] }
orbit-mcp = { path = "../orbit-mcp" }
serde_json.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json.workspace = true
tempfile = "3"
