[package]
name = "orbit-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "orbit"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
clap.workspace = true
csv = "1"
orbit-core = { path = "../orbit-core", features = ["clap"] }
serde_json.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json.workspace = true
tempfile = "3"
