[package]
name = "orbit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "orbit"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
clap.workspace = true
colored = "2"
comfy-table = "7"
csv = "1"
orbit-core = { path = "../orbit-core", features = ["clap"] }
orbit-types = { path = "../orbit-types" }
serde_json.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json.workspace = true
tempfile = "3"
