[package]
name = "orbit-core"
version.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
notify.workspace = true
orbit-exec = { path = "../orbit-exec" }
orbit-policy = { path = "../orbit-policy" }
orbit-store = { path = "../orbit-store" }
orbit-tools = { path = "../orbit-tools" }
orbit-types = { path = "../orbit-types" }
serde_json.workspace = true
serde.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile = "3"
