[package]
name = "orbit-core"
version.workspace = true
edition.workspace = true

[features]
clap = ["orbit-types/clap"]

[dependencies]
chrono.workspace = true
jsonschema.workspace = true
notify.workspace = true
orbit-agent = { path = "../orbit-agent" }
orbit-exec = { path = "../orbit-exec" }
orbit-policy = { path = "../orbit-policy" }
orbit-store = { path = "../orbit-store" }
orbit-tools = { path = "../orbit-tools" }
orbit-types = { path = "../orbit-types" }
serde_json.workspace = true
serde.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tempfile = "3"
toml.workspace = true

[dev-dependencies]
