[package]
name = "orbit-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
clap = ["orbit-types/clap"]

[dependencies]
chrono.workspace = true
jsonschema.workspace = true
orbit-engine = { path = "../orbit-engine" }
orbit-policy = { path = "../orbit-policy" }
orbit-store = { path = "../orbit-store" }
orbit-tools = { path = "../orbit-tools" }
orbit-types = { path = "../orbit-types" }
reqwest.workspace = true
serde_json.workspace = true
serde.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tempfile = "3"
toml.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
