[package]
name = "orbit-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
libc = { workspace = true }
jsonschema.workspace = true
orbit-agent = { path = "../orbit-agent" }
orbit-exec = { path = "../orbit-exec" }
orbit-store = { path = "../orbit-store" }
orbit-tools = { path = "../orbit-tools" }
orbit-types = { path = "../orbit-types" }
serde.workspace = true
serde_json.workspace = true
tempfile = "3"
tracing.workspace = true
