[project]
name = "orbit-map"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "pydantic>=2.0",
    "tiktoken",
    "click",
    "openai",
]

[project.scripts]
orbit-map = "orbit_map.main:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
