[package]
name = "orbit-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
jsonschema.workspace = true
orbit-types = { path = "../orbit-types" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile = "3"
