[package]
name = "orbit-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orbit-types = { path = "../orbit-types" }
orbit-tools = { path = "../orbit-tools" }
chrono = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
sha2 = { workspace = true }
tracing.workspace = true
