[package]
name = "orbit-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.orbit]
stability = "internal"

[lints]
workspace = true

[dependencies]
orbit-common = { path = "../orbit-common" }
orbit-tools = { path = "../orbit-tools" }
chrono = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
sha2 = { workspace = true }
tracing.workspace = true
