[package]
name = "orbit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "orbit"
path = "src/main.rs"

[dependencies]
axum.workspace = true
chrono.workspace = true
clap.workspace = true
colored = "2"
comfy-table = "7"
csv = "1"
orbit-common = { path = "../orbit-common" }
orbit-core = { path = "../orbit-core", features = ["clap"] }
orbit-knowledge = { path = "../orbit-knowledge" }
orbit-mcp = { path = "../orbit-mcp" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json.workspace = true
serde_yaml.workspace = true
tempfile = "3"
