[package]
name = "orbit-common"
version.workspace = true
edition.workspace = true
license.workspace = true

# `orbit-common` is a transitional facade. Its sources have moved to
# `orbit-types` (domain) and `orbit-util` (helpers). This crate re-exports
# them so existing `orbit_common::types::*` / `orbit_common::utility::*`
# import paths keep resolving while consumers migrate. See `RETIRE.md`.

[features]
clap = ["orbit-types/clap"]

[dependencies]
orbit-types = { path = "../orbit-types" }
orbit-util = { path = "../orbit-util" }
tracing.workspace = true
