[package]
name = "orbit-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.orbit]
stability = "internal"

[lints]
workspace = true

[features]
clap = ["orbit-common/clap"]

[dependencies]
chrono.workspace = true
jsonschema.workspace = true
orbit-common = { path = "../orbit-common" }
orbit-embed = { path = "../orbit-embed" }
orbit-engine = { path = "../orbit-engine" }
orbit-knowledge = { path = "../orbit-knowledge" }
orbit-policy = { path = "../orbit-policy" }
orbit-store = { path = "../orbit-store" }
orbit-tools = { path = "../orbit-tools" }
regex.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
serde.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tempfile = "3"
toml.workspace = true
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
