[package]
name = "orbit-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.orbit]
stability = "internal"

[lints]
workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
clap.workspace = true
futures-core = "0.3"
orbit-common = { path = "../orbit-common" }
orbit-core = { path = "../orbit-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
serde_yaml.workspace = true
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
