[package]
name = "orbit-embed"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.orbit]
stability = "internal"

[lints]
workspace = true

[dependencies]
blake3.workspace = true
chrono.workspace = true
orbit-common = { path = "../orbit-common" }
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
