[package]
name = "orbit-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.orbit]
stability = "internal"

[lints]
workspace = true

[dependencies]
chrono.workspace = true
libc = { workspace = true }
jsonschema.workspace = true
orbit-agent = { path = "../orbit-agent" }
orbit-common = { path = "../orbit-common" }
orbit-exec = { path = "../orbit-exec" }
orbit-store = { path = "../orbit-store" }
orbit-tools = { path = "../orbit-tools" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile = "3"
thiserror.workspace = true
tiktoken-rs.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
