[package]
name = "orbit-exec"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.orbit]
stability = "internal"

[lints]
workspace = true

[dependencies]
orbit-common = { path = "../orbit-common" }
tempfile = "3"
wait-timeout.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
