[package]
name = "orbit-knowledge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
orbit-types = { path = "../orbit-types" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"

[dev-dependencies]
tempfile = "3"
