[package]
name = "orbit-knowledge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
fs2.workspace = true
ignore = "0.4.25"
orbit-common = { path = "../orbit-common" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
tree-sitter = "0.26"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"

[dev-dependencies]
tempfile = "3"
