[package]
name = "orbit-knowledge"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.orbit]
stability = "internal"

[lints]
workspace = true

[dependencies]
chrono.workspace = true
fs2.workspace = true
ignore = "0.4.25"
libc.workspace = true
orbit-common = { path = "../orbit-common" }
regex.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
tree-sitter = "0.26"
tree-sitter-c = "0.24.2"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-ruby = "0.23.1"
lru = "0.17.0"
rayon = "1.12.0"

[dev-dependencies]
proptest.workspace = true
tempfile = "3"
