[package]
name = "orbit-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.orbit]
stability = "internal"

[lints]
workspace = true

[dependencies]
orbit-common = { path = "../orbit-common" }
rmcp = { version = "1.5", default-features = false, features = ["server", "transport-io"] }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
