[package]
name = "orbit-policy"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.orbit]
stability = "internal"

[lints]
workspace = true

[dependencies]
orbit-common = { path = "../orbit-common" }
serde.workspace = true

[dev-dependencies]
chrono.workspace = true
