[package]
name = "orbit-registry"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []
transport-git2 = ["dep:git2"]

[dependencies]
git2 = { workspace = true, optional = true }
orbit-common = { path = "../orbit-common" }

[dev-dependencies]
toml.workspace = true
