[package]
name = "orbit-search-companion"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.orbit]
stability = "experimental"

[lints]
workspace = true

[[bin]]
name = "orbit-search-companion"
path = "src/main.rs"

[dependencies]
clap.workspace = true
fastembed = { version = "5.13.4", default-features = false, features = ["hf-hub-native-tls", "ort-download-binaries-native-tls"] }
orbit-common = { path = "../orbit-common" }
orbit-search = { path = "../orbit-search" }
serde_json.workspace = true
