[package]
name = "orbit-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
fs2.workspace = true
jsonschema.workspace = true
orbit-common = { path = "../orbit-common" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true

[dev-dependencies]
regex.workspace = true
tempfile = "3"
