[package]
name = "orbit-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
blake3.workspace = true
chrono.workspace = true
fs2.workspace = true
jsonschema.workspace = true
orbit-common = { path = "../orbit-common" }
regex.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile = "3"
