[package]
name = "orbit-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
clap = ["dep:clap"]

[dependencies]
chrono.workspace = true
clap = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
