[package]
name = "orbit-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
clap = ["dep:clap"]

[dependencies]
chrono.workspace = true
clap = { workspace = true, optional = true }
fs2.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
unicode-normalization.workspace = true
url.workspace = true

orbit-util = { path = "../orbit-util" }

[dev-dependencies]
proptest.workspace = true
tempfile = "3"
