[package]
name = "orbit-util"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
fs2.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[dev-dependencies]
tempfile = "3"
