[package]
name = "orbit-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
orbit-exec = { path = "../orbit-exec" }
orbit-lock = { path = "../orbit-lock" }
orbit-types = { path = "../orbit-types" }
serde_json.workspace = true

[dev-dependencies]
rusqlite.workspace = true
tempfile = "3"
